// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`PasswordInput should render correctly with required props (label and name) 1`] = `
<div>
  <div
    class="govuk-form-group govuk-password-input"
    data-module="govuk-password-input"
  >
    <label
      class="govuk-label"
      for="testPassword"
    >
      Test Label
    </label>
    <div
      class="govuk-input__wrapper govuk-password-input__wrapper"
    >
      <input
        aria-describedby=""
        autocapitalize="none"
        autocomplete="current-password"
        class="govuk-input govuk-password-input__input govuk-js-password-input-input"
        data-test="password-input_testPassword"
        id="testPassword"
        name="testPassword"
        spellcheck="false"
        type="password"
      />
      <button
        aria-controls="testPassword"
        aria-label="Show password"
        class="govuk-button govuk-button--secondary govuk-password-input__toggle govuk-js-password-input-toggle"
        data-module="govuk-button"
        type="button"
      >
        Show
      </button>
    </div>
  </div>
</div>
`;

exports[`PasswordInput should render with a hint, a specific width class, and no error 1`] = `
<div>
  <div
    class="govuk-form-group govuk-password-input"
    data-module="govuk-password-input"
  >
    <label
      class="govuk-label"
      for="secretCode"
    >
      Secret Code
    </label>
    <div
      class="govuk-hint"
      id="secretCode-hint"
    >
      Keep it safe
    </div>
    <div
      class="govuk-input__wrapper govuk-password-input__wrapper"
    >
      <input
        aria-describedby="secretCode-hint"
        autocapitalize="none"
        autocomplete="current-password"
        class="govuk-input govuk-password-input__input govuk-js-password-input-input govuk-input--width-10"
        data-test="password-input_secretCode"
        id="secretCode"
        name="secretCode"
        spellcheck="false"
        type="password"
      />
      <button
        aria-controls="secretCode"
        aria-label="Show password"
        class="govuk-button govuk-button--secondary govuk-password-input__toggle govuk-js-password-input-toggle"
        data-module="govuk-button"
        type="button"
      >
        Show
      </button>
    </div>
  </div>
</div>
`;

exports[`PasswordInput should render with a large label size class 1`] = `
<div>
  <div
    class="govuk-form-group govuk-password-input"
    data-module="govuk-password-input"
  >
    <label
      class="govuk-label govuk-label--l"
      for="largeLabelPass"
    >
      Large Label
    </label>
    <div
      class="govuk-input__wrapper govuk-password-input__wrapper"
    >
      <input
        aria-describedby=""
        autocapitalize="none"
        autocomplete="current-password"
        class="govuk-input govuk-password-input__input govuk-js-password-input-input"
        data-test="password-input_largeLabelPass"
        id="largeLabelPass"
        name="largeLabelPass"
        spellcheck="false"
        type="password"
      />
      <button
        aria-controls="largeLabelPass"
        aria-label="Show password"
        class="govuk-button govuk-button--secondary govuk-password-input__toggle govuk-js-password-input-toggle"
        data-module="govuk-button"
        type="button"
      >
        Show
      </button>
    </div>
  </div>
</div>
`;

exports[`PasswordInput should render with error styling and an error message when 'error' is a string 1`] = `
<div>
  <div
    class="govuk-form-group govuk-password-input govuk-form-group--error"
    data-module="govuk-password-input"
  >
    <label
      class="govuk-label"
      for="testPassword"
    >
      Password
    </label>
    <span
      class="govuk-error-message"
      data-test="password-input_testPassword-error"
      id="testPassword-error"
    >
      <span
        class="govuk-visually-hidden"
      >
        Error:
      </span>
       
      You must enter a stronger password
    </span>
    <div
      class="govuk-input__wrapper govuk-password-input__wrapper"
    >
      <input
        aria-describedby="testPassword-error"
        autocapitalize="none"
        autocomplete="current-password"
        class="govuk-input govuk-password-input__input govuk-js-password-input-input govuk-input--error"
        data-test="password-input_testPassword"
        id="testPassword"
        name="testPassword"
        spellcheck="false"
        type="password"
      />
      <button
        aria-controls="testPassword"
        aria-label="Show password"
        class="govuk-button govuk-button--secondary govuk-password-input__toggle govuk-js-password-input-toggle"
        data-module="govuk-button"
        type="button"
      >
        Show
      </button>
    </div>
  </div>
</div>
`;
